--- a/packages/drayman-core/package.json
+++ b/packages/drayman-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drayman-core",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
