--- a/packages/drayman-tags/package.json
+++ b/packages/drayman-tags/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drayman-tags",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "main": "dist/index.js",
   "files": [
