--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@drayman/platform",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -16,13 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@drayman/core": "^1.0.0-alpha.0",
+    "@drayman/core": "^1.0.0-alpha.4",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "multer": "^1.4.2",
     "shortid": "^2.2.16",
-    "typescript": "^4.2.4",
-    "socket.io": "^4.0.1"
+    "socket.io": "^4.0.1",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
