Include missing publish files for types.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "build": "tsc && node ./dist/map-elements"
   },
+  "files": [
+    "./dist/index.d.ts"
+  ],
   "types": "./dist/index.d.ts",
   "keywords": [],
   "author": "",
