Fix missing publish file path.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,7 @@
     "build": "tsc && node ./dist/map-elements"
   },
   "files": [
-    "./dist/index.d.ts"
+    "dist/index.d.ts"
   ],
   "types": "./dist/index.d.ts",
   "keywords": [],
