--- a/packages/platform-demo/package.json
+++ b/packages/platform-demo/package.json
@@ -2,7 +2,7 @@
   "name": "@drayman/platform-demo",
   "version": "1.0.0-alpha.6",
   "scripts": {
-    "start:dev": "concurrently \"drayman-platform build:watch\" \"drayman-platform start\""
+    "start:dev": "drayman-platform start:dev"
   },
   "private": "true",
   "author": "",
@@ -11,7 +11,6 @@
     "@drayman/core": "^1.0.0-alpha.4",
     "@drayman/types": "^1.0.0-alpha.6",
     "@types/node": "^14.14.41",
-    "concurrently": "^6.0.2",
     "typescript": "^4.2.4"
   },
   "dependencies": {
