Add tests to several packages.

--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -2,13 +2,15 @@
   "name": "@drayman/element",
   "version": "1.0.0-alpha.4",
   "scripts": {
+    "test:scripts": "jest --config=./scripts/jest.config.js",
+    "test:element": "jest --config=./jest.config.js",
+    "test": "npm run test:scripts && npm run test:element",
     "build": "npm run map-elements && ng build --prod --single-bundle --output-hashing=none",
     "map-elements": "tsc -p ./scripts/tsconfig.json && node ./dist/map-elements"
   },
   "files": [
     "dist/main-es2015.js"
   ],
-  "type": "module",
   "main": "dist/main-es2015.js",
   "module": "dist/main-es2015.js",
   "devDependencies": {
@@ -27,28 +29,29 @@
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
     "@angular/router": "~11.2.6",
-    "@drayman/tags": "^1.0.0-alpha.4",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@drayman/types": "^1.0.0-alpha.6",
+    "@ngneat/spectator": "^7.1.0",
     "@types/is-hotkey": "^0.1.2",
-    "@types/jasmine": "~3.6.0",
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.20.10",
+    "babel-jest": "^26.6.3",
     "codelyzer": "^6.0.0",
     "elements-zone-strategy": "^10.0.1",
     "fast-json-patch": "^3.0.0-1",
     "is-hotkey": "^0.2.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "ngx-build-plus": "^11.0.0",
-    "protractor": "~7.0.0",
     "rxjs": "~6.6.0",
+    "ts-json-schema-generator": "^0.91.0",
     "ts-node": "^8.3.0",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5",
+    "typescript-json-schema": "^0.50.0",
     "zone.js": "~0.11.3"
   }
 }
