--- a/packages/platform/element/package.json
+++ b/packages/platform/element/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "extended-drayman-element",
+  "name": "@drayman/platform-element",
   "version": "1.0.0-alpha.7",
   "scripts": {
     "build": "ng build --prod --single-bundle --output-hashing=none"
@@ -29,17 +29,8 @@
     "@angular-devkit/build-angular": "~0.1102.5",
     "@angular/cli": "~11.2.5",
     "@angular/compiler-cli": "~11.2.6",
-    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
