--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "cypress:open": "cypress run"
   },
   "files": [
     "dist",
@@ -29,6 +30,7 @@
     "@types/fs-extra": "^9.0.11",
     "@types/multer": "^1.4.5",
     "@types/shortid": "0.0.29",
+    "cypress": "^7.2.0",
     "npm": "^7.10.0"
   }
 }
