--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0-alpha.6",
   "description": "",
   "scripts": {
-    "build": "tsc && node ./dist/map-elements"
+    "test": "dtslint --localTs node_modules/typescript/lib types"
   },
   "files": [
-    "dist/index.d.ts"
+    "types/index.d.ts"
   ],
-  "types": "./dist/index.d.ts",
+  "types": "types",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@drayman/tags": "^1.0.0-alpha.4",
     "@types/node": "^14.14.41",
+    "dtslint": "^4.0.9",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "csstype": "^3.0.8"
   }
 }
