--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,8 @@
   "files": [
     "jsx-runtime.d.ts",
     "jsx-runtime.js",
-    "dist"
+    "dist",
+    "shared"
   ],
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
     "react": "^17.0.2",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "ts-node": "^9.1.1"
   }
 }
