--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -5,7 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "cypress:open": "cypress run"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "drayman:start": "node ./dist/index.js start:dev ./app",
+    "test": "start-server-and-test drayman:start http://localhost:3033 cypress:run"
   },
   "files": [
     "dist",
@@ -26,11 +29,13 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@drayman/types": "^1.0.0-alpha.6",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.11",
     "@types/multer": "^1.4.5",
     "@types/shortid": "0.0.29",
     "cypress": "^7.2.0",
-    "npm": "^7.10.0"
+    "npm": "^7.10.0",
+    "start-server-and-test": "^1.12.1"
   }
 }
