--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,14 +14,36 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
-        
-      - name: Setup lerna
+      
+      - name: "@drayman/types"
+        working-directory: ./packages/types
         run: |
-          sudo npm install lerna -g
-          lerna bootstrap
+          npm install
+          npm run test
         
-      - name: Build
-        run: lerna run build
-        
-      - name: Test
-        run: lerna run test
+      - name: "@drayman/core"
+        working-directory: ./packages/core
+        run: |
+          npm install
+          npm run build
+          npm run test
+          
+      - name: "@drayman/element"
+        working-directory: ./packages/element
+        run: |
+          npm install
+          npm run build
+          npm run test
+          
+      - name: "@drayman/platform-element"
+        working-directory: ./packages/platform/element
+        run: |
+          npm install
+          npm run build
+          
+      - name: "@drayman/platform"
+        working-directory: ./packages/platform
+        run: |
+          npm install
+          npm run build
+          npm run test
