--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.39",
     "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "typescript": "~4.1.5"
+    "jest": "^26.6.3"
   },
   "dependencies": {
     "execa": "^5.0.0",
@@ -35,6 +34,7 @@
     "fs-extra": "^9.1.0",
     "react": "^17.0.2",
     "shortid": "^2.2.16",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "~4.1.5"
   }
 }
