--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
+    "@drayman/elements": "^0.0.1",
     "@drayman/types": "^1.0.0-alpha.8",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.11",
