--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -44,6 +44,7 @@
     "is-hotkey": "^0.2.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
+    "mat-single-overlay": "^0.0.2",
     "ngx-build-plus": "^11.0.0",
     "rxjs": "~6.6.0",
     "ts-json-schema-generator": "^0.91.0",
