--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -133,6 +133,7 @@
     "filepond-plugin-get-file": "1.0.6",
     "jest": "26.4.2",
     "jest-preset-angular": "^8.3.1",
+    "mat-single-overlay": "^0.0.2",
     "ng-lazyload-image": "9.0.1",
     "ng2-date-picker": "^10.0.1",
     "ng2-pdf-viewer": "^6.3.2",
