Add default props typings to elements.

--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -90,6 +90,7 @@
     }
   },
   "dependencies": {
+    "@drayman/types": "^1.0.0-alpha.20",
     "claviz-charts": "0.5.0"
   },
   "devDependencies": {
