--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -53,3 +53,15 @@ jobs:
         run: |
           npm install
           npm run build
+
+      - name: "@drayman/framework-init"
+        working-directory: ./packages/framework-init
+        run: |
+          npm install
+          npm run build
+
+      - name: "@drayman/framework-examples"
+        working-directory: ./packages/framework-examples
+        run: |
+          npm install
+          npm run build
