--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -94,9 +94,9 @@
     "claviz-charts": "0.5.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "10.0.0",
+    "@angular-builders/jest": "11.0.0",
     "@angular-devkit/build-angular": "^0.1001.0",
-    "@angular-extensions/elements": "10.0.2",
+    "@angular-extensions/elements": "^11.0.1",
     "@angular/animations": "10.1.0",
     "@angular/cdk": "10.2.0",
     "@angular/cli": "10.1.0",
@@ -126,19 +126,16 @@
     "codelyzer": "6.0.0",
     "dayjs": "^1.9.6",
     "deepmerge": "4.2.2",
-    "document-register-element": "^1.14.10",
     "dot-object": "2.1.3",
-    "elements-zone-strategy": "10.0.0",
     "filepond": "4.20.1",
     "filepond-plugin-file-validate-size": "2.2.1",
     "filepond-plugin-get-file": "1.0.6",
     "jest": "26.4.2",
     "jest-preset-angular": "^8.3.1",
     "mat-single-overlay": "^0.0.2",
-    "ng-lazyload-image": "9.0.1",
+    "ng-lazyload-image": "9.1.0",
     "ng2-date-picker": "^10.0.1",
     "ng2-pdf-viewer": "^6.3.2",
-    "ngx-autofocus-fix": "1.0.4",
     "ngx-build-plus": "10.1.1",
     "ngx-device-detector": "2.0.0",
     "ngx-filepond": "5.0.1",
