--- a/packages/framework-init/package.json
+++ b/packages/framework-init/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@drayman/framework-init",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-alpha.35",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -22,14 +22,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
+    "@types/lodash": "4.14.169",
     "@types/node": "^15.3.0",
     "@types/shelljs": "^0.8.8",
-    "typescript": "~4.1.5",
-    "@types/lodash": "4.14.169"
+    "typescript": "~4.1.5"
   },
   "dependencies": {
-    "lodash": "4.17.21",
     "fs-extra": "^10.0.0",
+    "lodash": "4.17.21",
     "shelljs": "^0.8.4"
   }
 }
