--- a/packages/framework-examples/package.json
+++ b/packages/framework-examples/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "private": "true",
   "scripts": {
-    "build": "tsc && node ./dist/index.js"
+    "examples:generate": "tsc && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
