Intoduce drayman.config file; move cli parameters to config; fix drayman-elements select for non-existing value; add clear value option to drayman-elements select; add class property to all elements.

--- a/packages/framework-init/package.json
+++ b/packages/framework-init/package.json
@@ -12,7 +12,8 @@
     "template/src",
     "template/gitignore",
     "template/package.json",
-    "template/tsconfig.json"
+    "template/tsconfig.json",
+    "template/drayman.config.js"
   ],
   "bin": {
     "drayman-framework-init": "./dist/index.js"
