--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -7,7 +7,11 @@
         "declaration": true,
         "resolveJsonModule": true,
         "stripInternal": true,
-        "rootDir": "./src"
+        "rootDir": "./src",
+        "types": [
+            "node",
+            "@drayman/types"
+        ]
     },
     "include": [
         "./src/**/*"
