Use worker threads instead of processes for component spawning.

--- a/packages/framework/cypress/tsconfig.json
+++ b/packages/framework/cypress/tsconfig.json
@@ -6,7 +6,9 @@
             "dom"
         ],
         "types": [
-            "cypress"
+            "cypress",
+            "cypress-file-upload",
+            "node"
         ]
     },
     "include": [
