--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "npm run build && jest --coverage",
     "build": "tsc"
   },
   "files": [
@@ -29,10 +29,10 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "execa": "^5.0.0",
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
     "node-find": "^0.7.2",
+    "piscina": "^3.1.0",
     "pretty-error": "^3.0.3",
     "react": "^17.0.2",
     "shortid": "^2.2.16",
