--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -37,6 +37,7 @@
     "@types/multer": "^1.4.5",
     "@types/shortid": "0.0.29",
     "cypress": "^7.2.0",
+    "cypress-file-upload": "^5.0.7",
     "dayjs": "^1.10.4",
     "npm": "^7.10.0",
     "start-server-and-test": "^1.12.1"
