Destroy uninitialized component instances gracefully.

--- a/packages/core/component-processor.tsconfig.json
+++ b/packages/core/component-processor.tsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
         "jsxImportSource": "@drayman/core",
         "jsx": "react-jsx",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "target": "esnext",
+        "module": "CommonJS",
+        "moduleResolution": "Node"
     }
 }
