--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,10 +32,10 @@
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
     "node-find": "^0.7.2",
-    "piscina": "^3.1.0",
     "pretty-error": "^3.0.3",
     "react": "^17.0.2",
     "shortid": "^2.2.16",
+    "threads": "^1.6.4",
     "ts-node": "^9.1.1",
     "typescript": "~4.1.5"
   }
