--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -12,7 +12,7 @@
   },
   "files": [
     "dist",
-    "element/dist"
+    "client/dist"
   ],
   "bin": {
     "drayman-framework": "./dist/index.js"
