--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
+    "all-html-attributes": "^1.0.4",
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
     "node-find": "^0.7.2",
