Update framework-init template.

--- a/packages/framework-init/template/tsconfig.json
+++ b/packages/framework-init/template/tsconfig.json
@@ -9,7 +9,7 @@
         "esModuleInterop": true,
         "types": [
             "@drayman/types",
-            "node"
+            "@types/node"
         ]
     },
     "include": [
