--- a/packages/framework-init/template/package.json
+++ b/packages/framework-init/template/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@drayman/types": "^1.0.0-alpha.59",
+    "@types/node": "16.4.13",
     "typescript": "~4.1.5"
   },
   "dependencies": {
