--- a/packages/framework-examples/drayman-framework-example/sandbox.config.json
+++ b/packages/framework-examples/drayman-framework-example/sandbox.config.json
@@ -1,7 +1,7 @@
 {
   "template": "node",
   "infiniteLoopProtection": true,
-  "hardReloadOnChange": false,
+  "hardReloadOnChange": true,
   "view": "browser",
   "container": {
     "node": "14",
