--- a/packages/framework-examples/drayman-framework-example/package.json
+++ b/packages/framework-examples/drayman-framework-example/package.json
@@ -6,11 +6,11 @@
     "start": "drayman-framework start"
   },
   "devDependencies": {
-    "@drayman/types": "^1.0.0-alpha.59",
+    "@drayman/types": "latest",
     "@types/node": "16.4.13",
     "typescript": "~4.1.5"
   },
   "dependencies": {
-    "@drayman/framework": "^1.0.0-alpha.62"
+    "@drayman/framework": "latest"
   }
 }
