--- a/packages/framework-init/package.json
+++ b/packages/framework-init/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@drayman/framework-init",
-  "version": "1.0.0-alpha.73",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
