--- a/packages/framework-init/template/package.json
+++ b/packages/framework-init/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@drayman/framework-template",
-  "version": "1.0.0-alpha.73",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "drayman-framework start"
