--- a/packages/framework/client/package.json
+++ b/packages/framework/client/package.json
@@ -1,19 +1,19 @@
 {
     "name": "@drayman/framework-client",
-    "version": "1.0.0-alpha.70",
+    "version": "1.0.0",
     "scripts": {
         "build": "webpack",
         "start": "webpack serve"
     },
     "private": true,
     "dependencies": {
-        "@drayman/element": "^1.0.0-alpha.70"
+        "@drayman/element": "^1.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.14.3",
         "@babel/core": "^7.14.3",
         "@babel/preset-typescript": "^7.13.0",
-        "@drayman/types": "^1.0.0-alpha.66",
+        "@drayman/types": "^1.0.0",
         "ts-loader": "^9.2.1",
         "typescript": "^4.2.4",
         "webpack": "^5.37.1",
