--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@drayman/types",
-  "version": "1.0.0-alpha.66",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "tsc": "tsc",
