--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -25,6 +25,8 @@
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "multer": "^1.4.2",
+    "postcss": "^8.3.6",
+    "postcss-load-config": "^3.1.0",
     "shortid": "^2.2.16",
     "typescript": "^4.2.4",
     "ws": "^7.4.6"
