--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@drayman/core": "^1.4.0",
     "chokidar": "^3.5.1",
+    "cup-readdir": "^1.0.3",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
+    "http-terminator": "^3.0.3",
     "multer": "^1.4.2",
     "postcss": "^8.3.6",
     "postcss-load-config": "^3.1.0",
