--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -21,12 +21,11 @@
   "license": "ISC",
   "dependencies": {
     "@drayman/core": "^1.4.0",
-    "chokidar": "^3.5.1",
     "cup-readdir": "^1.0.3",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
-    "http-terminator": "^3.0.3",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.13",
     "postcss": "^8.3.6",
     "postcss-load-config": "^3.1.0",
     "shortid": "^2.2.16",
@@ -41,6 +40,7 @@
     "@types/multer": "^1.4.5",
     "@types/shortid": "0.0.29",
     "@types/ws": "^7.4.4",
+    "@types/nodemon": "^1.19.1",
     "cypress": "^7.2.0",
     "cypress-file-upload": "^5.0.7",
     "dayjs": "^1.10.4",
