--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -21,6 +21,11 @@ jobs:
           npm install
           npm run test
 
+      - name: "@drayman/framework install packages"
+        working-directory: ./packages/framework
+        run: |
+          npm install
+
       - name: "@drayman/core"
         working-directory: ./packages/core
         run: |
@@ -44,7 +49,6 @@ jobs:
       - name: "@drayman/framework"
         working-directory: ./packages/framework
         run: |
-          npm install
           npm run build
           npm run test
 
