Introduce error boundaries; Display error on component init and render; Pretty print console output.

--- a/packages/core/component-processor.tsconfig.json
+++ b/packages/core/component-processor.tsconfig.json
@@ -5,6 +5,7 @@
         "esModuleInterop": true,
         "target": "esnext",
         "module": "CommonJS",
-        "moduleResolution": "Node"
+        "moduleResolution": "Node",
+        "inlineSourceMap": true
     }
 }
