--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,11 +30,12 @@
   },
   "dependencies": {
     "all-html-attributes": "^1.0.4",
+    "consola": "^2.15.3",
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
     "node-find": "^0.7.2",
-    "pretty-error": "^3.0.3",
     "shortid": "^2.2.16",
+    "source-map-support": "^0.5.21",
     "threads": "^1.6.4",
     "ts-node": "^9.1.1",
     "typescript": "~4.1.5"
