--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,7 +11,8 @@
         "types": [
             "node",
             "@drayman/types"
-        ]
+        ],
+        "inlineSourceMap": true
     },
     "include": [
         "./src/**/*"
