Update github action workflow.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,7 +14,9 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
-
+        with:
+          node-version: 16
+          
       - name: "@drayman/types"
         working-directory: ./packages/types
         run: |
