--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@drayman/types": "^2.9.0",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^14.14.39",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3"
@@ -33,6 +34,7 @@
     "consola": "^2.15.3",
     "fast-json-patch": "^3.0.0-1",
     "fs-extra": "^9.1.0",
+    "lodash": "^4.17.21",
     "node-find": "^0.7.2",
     "shortid": "^2.2.16",
     "source-map-support": "^0.5.21",
